# dl4bi

./: .gitignore  .pre-commit-config.yaml  README.md  mst_corridor_2km.geojson  pyproject.toml  selected_rectangles_5km.geojson  selected_rectangles_max_points.geojson  sinazongwe_district_mapping.ipynb
benchmarks/disease_mapping/: README.md  binomial_experiment.py  binomial_model.py  compare_across_mcmc_runs.py  data.ipynb  data.py  disease_mapping_experiment.py  evaluate.py  evaluate_gnp.py  infer.py  mcmc.py  model.py  predict.py  predict2.py  predict_gnp.py  predict_gp.py  predict_np.py  prepare_data.py  readme.md  results.csv  samplers.py  scratchbook.ipynb  survey_model.py  train.py  train2.py  train_gnp.py  utils.py  visualize.py
benchmarks/llm/: prepare_dataset.py  train.py
benchmarks/meta_learning/: README.md  autoregressive.py  bayes_opt.csv  bayes_opt_summarize.py  beijing_air_quality.py  bouncing_ball.py  celeba.py  cifar_10.py  compare_bfa_bsa.sh  denge.py  dengue.py  era5.py  era5_bsa_vs_svgp.py  generic_spatial.py  generic_spatiotemporal.py  gneiting_gp.py  gp.py  heaton.py  heaton_mle.py  hier_bayes.py  household_electric.py  mnist.py  multiscale_2d_gp.py  nairobi_rainfall.py  orthogonalize_embeddings.py  outbreaks.py  outbreaks_preprocess.py  outbreaks_temporal.py  plot_era5_comparisons.py  plot_gp_comparisons.py  plot_samples.py  plot_sir_comparisons.py  predator_prey.py  red_ball.py  reproduce_paper.py  sir.py  skin_lesions.py  so3_experiment.py  synthetic_air_quality.py  test_biased_flex_attention.py  (+4 more)
benchmarks/meta_regression/: 1D_GP.py  README.md  al.py  analyze_attention.py  bayes_opt.py  bayes_opt_summarize.py  celeba.py  cifar_10.py  compare.py  gif.py  gp.py  gp_compare.py  gp_evaluate.py  heaton.py  heaton_mle.py  mnist.py  outbreaks.py  outbreaks_preprocess.py  outbreaks_temporal.py  paired_t_test.py  plot_posterior_predictive.py  plot_samples.py  popgen.py  reproduce_paper.py  run.sh  sample.py  sir.py  test_sir_scale.py  uci.py  wandb_csv_to_latex.py
benchmarks/regression/: dengue.py  periodic.py
benchmarks/uk_disease_distribution/: README.md  gp.py  graph_model_utils.py  infer_gp.py  vae.py  (+7 more)
dge/: __init__.py  attention.py  attentive_neural_process.py  attn.py  ddim.py  deep_chol.py  embed.py  fast_attention.py  hftx.py  mlp.py  phi.py  pi_vae.py  prior_cvae.py  sp_vae.py  sptx.py  tnp.py  transformer.py
examples/: anp_gp.py  anp_vs_gp.py  attentive_neural_process.py  attentive_neural_process_periodic.py  deep_chol_gp.py  hftx_gp.py  kernel_regression.py  pi_vae_gp.py  sp_vae_gp.py  sptx_gp.py  tnp_gp.py
notebooks/: analysis.ipynb  analyze_nll.py  autoregressive_sampling.ipynb  autoregressive_sampling.py  compare_noise_vs_no_noise_in_test_values.py  plot_log_density_estimation_trace.py
scripts/: release.py
selected_rectangles_shp/: rectangles_union_utm.dbf  rectangles_union_utm.shp  rectangles_union_utm.shx  rectangles_union_wgs84.shp  rectangles_union_wgs84.shx  rectangles_utm.dbf  rectangles_utm.shp  rectangles_utm.shx  rectangles_wgs84.shp  rectangles_wgs84.shx
tests/: test_attention.py  test_attentive_neural_process.py  test_autoregressive.py  test_autoregressive_permutations.py  test_data.py  test_deep_chol.py  test_dist.py  test_embed.py  test_flow_matching.py  test_hyper.py  test_knn.py  test_meta_learning.py  test_meta_learning_data.py  test_meta_regression.py  test_mle.py  test_preprocess.py  test_transformer.py  test_vae.py
(+553 files in other folders)
