[tool.poetry]
name = "dge"
version = "0.1.0"
description = "Deep Generative Emulation"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clu = "^0.0.11"
flax = "^0.8.0"
optax = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.poetry.group.examples.dependencies]
arviz = "^0.18.0"
hydra-core = "^1.3.2"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
sps = {git = "ssh://git@github.com/MLGlobalHealth/sps.git"}
tqdm = "^4.66.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
